--- a/app/package.json
+++ b/app/package.json
@@ -27,7 +27,8 @@
         "react-router-dom": "^4.3.1",
         "react-scripts": "3.0.1",
         "react-transition-group": "^2.5.1",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "sweetalert": "^2.1.2"
     },
     "scripts": {
         "start": "react-scripts start",
