Visual do dashboard

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto= update
 
 # App Properties
 trisoft.app.jwtSecret= trisoftSecretKey
-trisoft.app.jwtExpirationMs= 86400000
+trisoft.app.jwtExpirationMs= 300000
 
 server.port = 9999
 
